Alterações na Home

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,12 +10,6 @@
 </ion-header>
 
 <ion-content>
-  <div>
-    <h2  class="welcome">A forma<br>mais<br> fácil de <br>vender <br>seu produto.</h2>
-    <p></p>
-    <div>
-      <ion-button color="favorite">Começar agora</ion-button>
-    </div>
-  </div>
-
+    <h2  class="welcome">A forma<br>mais<br> fácil de <br>negociar <br>seus produtos.</h2>
+    <ion-button color="favorite">Começar agora</ion-button>
 </ion-content>
