--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,11 +75,11 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-  /** favorite 
-  --ion-color-favorite: #69bb7b;
+  /** favorite **/
+  --ion-color-favorite: #265e31e7;
   --ion-color-favorite-rgb: 105,187,123;
   --ion-color-favorite-contrast: #ffffff;
   --ion-color-favorite-contrast-rgb: 255,255,255;
   --ion-color-favorite-shade: #5ca56c;
-  --ion-color-favorite-tint: #78c288;**/
+  --ion-color-favorite-tint: #78c288;
 }
