Criação da tela de login

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,5 +11,5 @@
 
 <ion-content>
     <h2  class="welcome">A forma<br>mais<br> fácil de <br>negociar <br>seus produtos.</h2>
-    <ion-button color="favorite">Começar agora</ion-button>
+    <ion-button color="favorite"[routerDirection]="'root'" [routerLink]="['/login']">Começar agora</ion-button>
 </ion-content>
