--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -37,6 +37,6 @@ p{
   letter-spacing: 2px;
 }
 ion-content{
-  --background: rgb(226, 223, 17) url('/assets/img/campo.png') no-repeat center center / cover !important; 
+  --background: url('/assets/img/campo.png') no-repeat center center / cover !important; 
 }
 
