--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -36,11 +36,11 @@
     <ion-card>
         <ion-item href="#" class="activated">
           <ion-thumbnail slot="start">
-                <ion-img src="/assets/img/campo.png"></ion-img>
+                <ion-img src="/assets/img/laranja.png"></ion-img>
           </ion-thumbnail>
           <ion-card-content>
-              <h2>Laranja</h2>  
-              <h1>R$30,00</h1>
+              <h2>Laranja kg</h2>  
+              <h1>R$3,00</h1>
               <p>01 de maio 00:42, Bragança</p>    
           </ion-card-content>
         </ion-item>
@@ -48,11 +48,11 @@
     <ion-card>
         <ion-item href="#" class="activated">
           <ion-thumbnail slot="start">
-                <ion-img src="/assets/img/agricultura.png"></ion-img>
+                <ion-img src="/assets/img/mamao.png"></ion-img>
           </ion-thumbnail>
           <ion-card-content>
-              <h2>Sortido de Frutas</h2>  
-              <h1>R$40,00</h1>
+              <h2>Mamão kg</h2>  
+              <h1>R$7,20</h1>
               <p>03 de fevereiro 00:42, Santa Bárbara do Pará</p>    
           </ion-card-content>
         </ion-item>
@@ -60,11 +60,11 @@
     <ion-card>
         <ion-item href="#" class="activated">
           <ion-thumbnail slot="start">
-                <ion-img src="/assets/img/campo.png"></ion-img>
+                <ion-img src="/assets/img/uva.png"></ion-img>
           </ion-thumbnail>
           <ion-card-content>
               <h2>Uva kg</h2>  
-              <h1>R$20,00</h1>
+              <h1>R$10,50</h1>
               <p>01 de maio 00:42, Santa Bárbara do Pará</p>    
           </ion-card-content>
         </ion-item>
@@ -72,11 +72,11 @@
     <ion-card>
         <ion-item href="#" class="activated">
           <ion-thumbnail slot="start">
-                <ion-img src="/assets/img/agricultura.png"></ion-img>
+                <ion-img src="/assets/img/alface.png"></ion-img>
           </ion-thumbnail>
           <ion-card-content>
-              <h2>Cesta de Verduras</h2>  
-              <h1>R$40,00</h1>
+              <h2>Alface 20kg</h2>  
+              <h1>R$27,00</h1>
               <p>03 de fevereiro 00:42, Santa Bárbara do Pará</p>    
           </ion-card-content>
         </ion-item>
@@ -84,11 +84,11 @@
     <ion-card>
         <ion-item href="#" class="activated">
           <ion-thumbnail slot="start">
-                <ion-img src="/assets/img/campo.png"></ion-img>
+                <ion-img src="/assets/img/pepino.png"></ion-img>
           </ion-thumbnail>
           <ion-card-content>
-              <h2>Uva kg</h2>  
-              <h1>R$20,00</h1>
+              <h2>Pepino kg</h2>  
+              <h1>R$3,00</h1>
               <p>01 de maio 00:42, Santa Bárbara do Pará</p>    
           </ion-card-content>
         </ion-item>
